# hulk

./: .gitattributes  404.html  Cargo.toml  Dockerfile  annotato.toml  docker-compose.yml  index.html  sitemap.xml
.dvc/: config
crates/ball_filter/: Cargo.toml
crates/control/: Cargo.toml
crates/hulk/: build.rs
crates/hulk_replayer/: Cargo.toml
crates/nao/: Cargo.toml
crates/object_detection/: Cargo.toml
crates/object_detection/src/: lib.rs  pose_detection.rs  pose_interpretation.rs  single_shot_detection.rs
crates/vision/: Cargo.toml
docs/tooling/: pepsi.md
etc/motions/: stand_up_back_new.json
etc/neural_networks/: yolov8n-mobilenet-ov.xml  yolov8n.xml
etc/parameters/: default.json  framework.json  head.P0000074A09S31C00028.json  head.P0000074A09S31C00029.json  head.P0000074A09S31C00037.json  head.P0000074A09S31T00003.json
framework/communication/: index.html
framework/configuration/: index.html
framework/cyclers/: index.html
framework/databases_and_types/: index.html
framework/directory_structure/: index.html
framework/error_handling/: index.html
framework/filtering/: index.html
framework/hardware_interface/: index.html
framework/logging/: index.html
framework/macros/: index.html
framework/modules/: index.html
framework/overview/: index.html
framework/process_entrypoint/: index.html
framework/runtime/: index.html
framework/thread_communication/: index.html
search/: search_index.json
tools/segmentator/: Cargo.toml
tools/segmentator/src/: export.rs  main.rs  polygon.rs  preview_widget.rs  segmentator_widget.rs
(+105 files in other folders)
