[package]
name = "object_detection"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
context_attribute = { workspace = true }
control = { workspace = true }
coordinate_systems = { workspace = true }
framework = { workspace = true }
geometry = { workspace = true }
hardware = { workspace = true }
itertools = { workspace = true }
linear_algebra = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true }
lazy_static = { workspace = true }
openvino = { workspace = true }
ordered-float = { workspace = true }
projection = { workspace = true }
serde = { workspace = true }
spl_network_messages = { workspace = true }
types = { workspace = true }
linear_algebra = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
nalgebra = { workspace = true }
