[package]
name = "segmentator"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
color-eyre = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true, features = ["image", "file"] }
lyon_tessellation = "*"
glob = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
